Fixed visible overflow in closed expansion panel

--- a/cinnamon-platform/cinnamon-frontend/src/app/styles/styling.less
+++ b/cinnamon-platform/cinnamon-frontend/src/app/styles/styling.less
@@ -174,7 +174,7 @@ input[type="file"]:disabled::-webkit-file-upload-button {
 }
 
 // Overwrite overflow so the absolute positioning of custom tooltips is working
-.mat-content, .mat-expansion-panel {
+.mat-expanded .mat-content, .mat-expansion-panel.mat-expanded {
     overflow: visible !important;
 }
 
